Fix field is not showing on blank template.

--- a/assets/scss/admin.scss
+++ b/assets/scss/admin.scss
@@ -121,3 +121,8 @@ code.mailtag.code {
 	box-sizing: border-box;
 	margin: -16px 10px -16px -16px;
 }
+
+#shaplaFieldList {
+	width: 100%;
+	min-height: 50px;
+}
